--- a/230207 Introductory Jupyter Notebook.ipynb
+++ b/230207 Introductory Jupyter Notebook.ipynb
@@ -13,61 +13,52 @@
    "id": "040d5670",
    "metadata": {},
    "source": [
-    "Welcome to your challenge - Quantify the extent of algae bloom changes and their impact on the Salmon Fishing Farms"
+    "Welcome to your challenge: Focussing on an Area of Interest (AOI) over the Faroe Islands, you can look at either: \n",
+    "\n",
+    "* Quantify the extent of algae bloom changes, and their impact on nearby Salmon Fishing Farms\n",
+    "* Quantify the extent of recent coastal erosion "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "449862b1",
+   "id": "83f7d184",
    "metadata": {},
    "source": [
-    "## Create Env"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01d61fe2",
-   "metadata": {},
-   "source": [
-    "Create a python environment senv for your packages, using yml file saxavord.yml"
+    "## Check Environment Active"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3f32f6eb",
+   "execution_count": null,
+   "id": "2277800d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Instructions should've being followed"
+    "# Desktop UI:\n",
+    "# It should also show this on the top RHS of your screen, below the LogOut button"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a70b8df2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# conda environments:\n",
-      "#\n",
-      "base                     C:\\Users\\s2448783\\AppData\\Local\\miniforge3\n",
-      "satenv                *  C:\\Users\\s2448783\\AppData\\Local\\miniforge3\\envs\\satenv\n",
-      "sense                    C:\\Users\\s2448783\\AppData\\Local\\miniforge3\\envs\\sense\n",
-      "sense2020                C:\\Users\\s2448783\\AppData\\Local\\miniforge3\\envs\\sense2020\n",
-      "testenv                  C:\\Users\\s2448783\\AppData\\Local\\miniforge3\\envs\\testenv\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Check its activated from the jupyter notebook\n",
+    "# Conda\n",
     "#  -- Activate environment will show a '*' next to it\n",
-    "#  -- It should also show this on the top RHS of your screen, below the LogOut button\n",
-    "!conda env list\n"
+    "!conda env list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4813635e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pip\n",
+    "# TODO: Add this for pip !pip XYZ"
    ]
   },
   {
@@ -85,11 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Packages\n",
     "import os\n",
-    "import rasterio\n",
+    "import glob\n",
+    "\n",
+    "import rasterio as rio\n",
     "import numpy as np\n",
-    "from zipfile import ZipFile\n",
-    "import glob"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from zipfile import ZipFile\n"
    ]
   },
   {
@@ -98,7 +93,11 @@
    "id": "1e21acda",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Visualisation Params\n",
+    "%matplotlib inline    # plots images in the Jupyter notebook cells\n",
+    "%matplotlib qt5       # opens a seperate browser window to view images"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +109,7 @@
     "### The Data Folder Structure\n",
     "Satellite imagery products are folders which contain satellite imagery data in a standardised way, including standard naming conventions for folders etc. Please see the SaxaVord PDF for an explanation of the Sentinel 2 naming convention. \n",
     "\n",
-    "A single image  product of an Area of Interest (AOI) at DateTime YYYYMMDD-HHMMSS is packaged in a folder with a hierarchical file structure. In our case this is:\n",
+    "A single image  product of a region at DateTime YYYYMMDD-HHMMSS is packaged in a folder with a hierarchical file structure. In our case this is:\n",
     "\n",
     "    |- S2A_MSIL2A_20220531T120411_N0400_R066_T30VUQ_20220531T183212 *folder for a single day-time image product*\n",
     "        |-S2A_MSIL2A_20220531T120411_N0400_R066_T30VUQ_20220531T183212.SAFE\n",
@@ -133,13 +132,23 @@
     "                            |-...\n",
     "\n",
     "\n",
+    "### Image Bands\n",
+    "* True Colour Images (RGB) are comprised of 3 bands, Red, Green and Blue - the visible light section of the Electromagnetic Spectrum. \n",
+    "\n",
+    "* Satellite sensors cover a far broader section of this spectrum, and therefore capture a larger number of bands. \n",
+    "\n",
+    "* Different phenomena on earth and within the atmosphere react differently to wavelengths across the spectrum (e.g. different bands), allowing us to make inferences about what is occuring below.\n",
+    "\n",
+    "* Certain bands are therefore useful for different environmental analyses.\n",
+    "\n",
+    "\n",
     "### Working with This Data\n",
     "For our data we have:\n",
     "* Images across dates\n",
     "* Each image has multiple bands in multiple resolutions\n",
     "* The filepath for each band is going to be very verbose and difficult to track due to the hierarchical structure\n",
     "\n",
-    "To make this easier to work with, we shall give each Image into it's own dictionary and store all filepaths there. This will enable easy referencing.\n",
+    "To make all these paths easier to work with, we shall give each Image into it's own dictionary and store all filepaths there. This will enable easy referencing.\n",
     "\n",
     "```\n",
     "img_band_dict = {\n",
@@ -168,7 +177,7 @@
     "```\n",
     "                 \n",
     "\n",
-    "For an image, the individual bands can then be accessed:\n",
+    "**For Example:** To create a True Colour Image (RGB) at 10m resolution, we use Red (B04), Green (B03), Blue (B02). The individual bands can then be accessed:\n",
     "\n",
     "```\n",
     "## 10m resolution:\n",
@@ -180,16 +189,7 @@
     "\n",
     "b_10m_filepath = img_band_dict['R10m']['B02']\n",
     "b_10m_band_img = get_band(b_10m_filepath)\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Loading in your data\n",
-    "\n",
-    " if you get an error (XYZ) Manually unzip + rename (cut off part of name)\n",
-    "\n",
-    " filepath = 'Drive:/' , 'C:\\\\'"
+    "```"
    ]
   },
   {
