loading vector data and matching crs

--- a/230207 Introductory Jupyter Notebook.ipynb
+++ b/230207 Introductory Jupyter Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "viral-absorption",
+   "id": "fiscal-gabriel",
    "metadata": {},
    "source": [
     "# SaxaVord EO Challenge"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italic-rochester",
+   "id": "yellow-consumer",
    "metadata": {},
    "source": [
     "Welcome to your challenge: Focussing on an Area of Interest (AOI) over the Faroe Islands, you can look at either: \n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-universe",
+   "id": "charitable-wrong",
    "metadata": {},
    "source": [
     "## Check Environment Active"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stunning-organic",
+   "id": "common-universe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "brazilian-compression",
+   "id": "worldwide-separation",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "genuine-above",
+   "id": "sharp-institution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cardiovascular-happiness",
+   "id": "sufficient-quick",
    "metadata": {},
    "source": [
     "## Import Packages"
@@ -95,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "foreign-burton",
+   "execution_count": 14,
+   "id": "suspected-congo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "adjusted-thriller",
+   "execution_count": 15,
+   "id": "electronic-northeast",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-verification",
+   "id": "regulated-masters",
    "metadata": {},
    "source": [
     "# Sentinel 2\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "danish-equation",
+   "id": "disabled-consortium",
    "metadata": {},
    "source": [
     "## Zipped Image Folders: Rename & Extract All Data"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "revised-circular",
+   "id": "alternate-enforcement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "anonymous-viking",
+   "id": "dressed-johns",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-easter",
+   "id": "instant-folder",
    "metadata": {},
    "source": [
     "## Create Dictionaries of Band File Paths"
@@ -343,8 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "natural-joyce",
+   "execution_count": 16,
+   "id": "subject-american",
    "metadata": {},
    "outputs": [
     {
@@ -371,15 +371,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-regulation",
+   "id": "thousand-fault",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "charming-watershed",
+   "execution_count": 17,
+   "id": "characteristic-element",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "related-baghdad",
+   "id": "reverse-following",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,8 +448,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "going-wright",
+   "execution_count": 18,
+   "id": "elect-victim",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "middle-frank",
+   "id": "furnished-lebanon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pointed-product",
+   "id": "rubber-logging",
    "metadata": {},
    "source": [
     "## Import Band Data and Pre-processing"
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complimentary-purple",
+   "id": "adequate-profile",
    "metadata": {},
    "source": [
     "The single band files (B02, B03, B04,...) are 2D rasters. These are 2D numpy arrays with some associated metadata. \n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "durable-patio",
+   "id": "taken-jonathan",
    "metadata": {},
    "source": [
     "First, let's load a single band into an array."
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authorized-lying",
+   "id": "proprietary-episode",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,8 +531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "current-memorabilia",
+   "execution_count": 20,
+   "id": "ultimate-nurse",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "  dtype=uint16)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-digest",
+   "id": "wrapped-representation",
    "metadata": {},
    "source": [
     "We have imported the image as a masked array, but currently the mask isn't doing very much and simply says \"False\". Instead we would like the portions of the image where we don't have data to be masked out so they are not included in any calculations we do on the raster.\n",
@@ -649,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "cross-slope",
+   "execution_count": 21,
+   "id": "injured-aluminum",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
       "Raster datatype has been updated from  uint8 to  int16\n",
       "Metadata dtype has been updated to: int16\n",
       "Metadata nodata value has been updated to: -9999\n",
-      "Raster datatype has been updated from  int16 to  int16\n",
+      "Raster datatype has been updated from  uint16 to  int16\n",
       "Metadata dtype has been updated to: int16\n",
       "Metadata nodata value has been updated to: -9999\n",
       "\n",
@@ -693,7 +693,7 @@
        "  dtype=int16)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-steering",
+   "id": "thousand-barrel",
    "metadata": {},
    "source": [
     "Note that we can access the data and mask separately with the syntax below."
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "anonymous-accessory",
+   "id": "local-morocco",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "processed-check",
+   "id": "forward-latitude",
    "metadata": {},
    "source": [
     "## Inspect and Plot data"
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daily-advisory",
+   "id": "fossil-house",
    "metadata": {},
    "source": [
     "We will load an RGB composite to show some data inspection and plotting methods."
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-mongolia",
+   "id": "framed-syndication",
    "metadata": {},
    "source": [
     "To have a quick look in RGB at a tile we can load the TCI file from each Sentinel image and plot it using the `rasterio.plot show()` method. Note that TCI raster is on the interval (0, 255), where 0 means nodata, unlike the individual band data."
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "objective-class",
+   "id": "accessory-center",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "activated-footage",
+   "id": "contemporary-custom",
    "metadata": {},
    "source": [
     "To create other composites, we can read in the bands separately. For example, a false colour composite uses B8, B4 and B3."
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "seventh-istanbul",
+   "id": "virtual-prevention",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "looking-world",
+   "id": "lightweight-bumper",
    "metadata": {},
    "source": [
     "As matplotlib can only deal with data in the uint8 range (0, 255), or data on the interval [0, 1], we will divide the data by 10000 and normalise it to the [0, 1] interval as preparation for plotting. We can also clip the data to the mean ± 2 standard deviations for nice plotting. You can change the clip parameter to False to see the difference."
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-recording",
+   "id": "welsh-saudi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-anderson",
+   "id": "guilty-budget",
    "metadata": {},
    "source": [
     "To plot the false colour composite, we can stack the images using `np.stack` so that rasterio.plot's show() method will plot all three bands. The stack must be in the correct band order to display correctly.\n",
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "casual-basics",
+   "id": "effective-external",
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-music",
+   "id": "present-restaurant",
    "metadata": {},
    "source": [
     "### Histograms"
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-stake",
+   "id": "lined-withdrawal",
    "metadata": {},
    "source": [
     "We can also use basic numpy statistics methods to look at the data. This is a good way to check that the mask is working and not using the original nodata zeroes."
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "lined-corporation",
+   "id": "subsequent-pastor",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "differential-album",
+   "id": "thermal-authorization",
    "metadata": {},
    "source": [
     "A histogram of the data can be plotted for inspection using the matplotlib hist method, or rasterio's built-in historgram plotter, show-hist."
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "hollywood-collapse",
+   "id": "affecting-tract",
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "acting-pregnancy",
+   "id": "solar-nigeria",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-turtle",
+   "id": "obvious-stylus",
    "metadata": {},
    "source": [
     "## Resampling - Changing the Spatial Resolution of a Band"
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-prisoner",
+   "id": "european-postcard",
    "metadata": {},
    "source": [
     "Resampling is a common task in geospatial analysis, because in order to do direct calculations between different bands, they must be the same spatial resolution, i.e. the size of a pixel mapped onto the surface of the Earth must be the same.\n",
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "printable-buying",
+   "id": "dependent-stage",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anticipated-telling",
+   "id": "relative-course",
    "metadata": {},
    "source": [
     "## Calculations: Band Maths, Indices and Thresholding"
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tamil-detective",
+   "id": "sunset-holly",
    "metadata": {},
    "source": [
     "Now that we know how to load bands from file into a numpy array, resample them, and plot them, we can use band maths to combine the bands in various ways and infer properties on the ground. Band maths consist of simply performing arithmetic operations to combine numpy arrays.\n",
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "proper-american",
+   "id": "behind-preserve",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-massage",
+   "id": "presidential-fetish",
    "metadata": {},
    "source": [
     "**Notice above:** For RGB, integer pixel values take values [0,255], yet above its far higher. Why?\n",
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occasional-saying",
+   "id": "transsexual-butler",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1311,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "indie-territory",
+   "id": "collective-significance",
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "included-account",
+   "id": "differential-chemistry",
    "metadata": {},
    "outputs": [
     {
@@ -1366,16 +1366,135 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stylish-finish",
+   "id": "living-currency",
    "metadata": {},
    "source": [
-    "# Sentinel 1"
+    "# Vector Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "extensive-intranet",
+   "metadata": {},
+   "source": [
+    "Most of the time, we are only interested in a region of interest within the satellite image. We can use vector data, polygons and points, to subset our raster data above.\n",
+    "\n",
+    "For spatial data, we use the `geopandas` package which is built on top of `pandas`.\n",
+    "\n",
+    "The code below imports the `geopandas` package and reads two vector data files as GeoDataFrames. These behave like regular dataframes but have an additional `geometry` column locating the data with reference to the coordinate system of the data.\n",
+    "1. A polygon of our area of interest (aoi).\n",
+    "2. A geodataframe of three points with the fish farm locations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "unknown-horizontal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "union-swing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of interest polygon:\n",
+      "                  Name                                           geometry\n",
+      "0  Faroe Salmon Farms  POLYGON ((-6.52870 62.33237, -6.85377 62.33817... \n",
+      "\n",
+      "Fish farm location points:\n",
+      "        Name                   geometry\n",
+      "0   Area 1   POINT (-6.84037 62.27180)\n",
+      "1    Area 2  POINT (-6.59578 62.25355)\n",
+      "2    Area 3  POINT (-6.60756 62.31270)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# specify data filepahts\n",
+    "aoi_fp = './starter_data/aoi.geojson'\n",
+    "fish_farms_fp = './starter_data/fish_farm_locations.geojson'\n",
+    "\n",
+    "# read data into geodataframes\n",
+    "aoi = gpd.read_file(aoi_fp)\n",
+    "fish_farm_pts = gpd.read_file(fish_farms_fp)\n",
+    "\n",
+    "print('Area of interest polygon:\\n', aoi, '\\n')\n",
+    "print('Fish farm location points:\\n', fish_farm_pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "anonymous-yemen",
+   "metadata": {},
+   "source": [
+    "### CRS Checks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daily-values",
+   "metadata": {},
+   "source": [
+    "When working with geospatial datasets from different sources it is always important to check that they are geographically referenced to the same coordinate reference system or CRS. We can easily convert between CRS's if there is a conflict."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "infrared-testing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting single band from file\n",
+      "Extracting band metadata\n",
+      "--> # bands: 1\n",
+      "--> array type <class 'numpy.ma.core.MaskedArray'>\n",
+      "--> datatype: uint16\n",
+      "--> nodata value: None\n",
+      "--> height: 5490 pixels\n",
+      "--> width: 5490 pixels\n",
+      "--> CRS: EPSG:32630\n",
+      "--> spatial resolution: 20.0 m\n",
+      "--------------------\n",
+      "The CRS of the Sentinel 2 data is EPSG:32630\n",
+      "The CRS of the aoi vector data is epsg:4326\n",
+      "The CRS of the fish farm location vector data is epsg:4326\n",
+      "True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "band_img, band_metadata = get_band(img_day_dict['R20m']['B05'])\n",
+    "\n",
+    "# print the coordinate reference system for each dataset\n",
+    "print('The CRS of the Sentinel 2 data is', band_metadata['crs'])\n",
+    "print('The CRS of the aoi vector data is', aoi.crs)\n",
+    "print('The CRS of the fish farm location vector data is', fish_farm_pts.crs)\n",
+    "\n",
+    "# convert vector data crs to satellite data crs\n",
+    "aoi = aoi.to_crs(band_metadata['crs'])\n",
+    "fish_farm_pts = fish_farm_pts.to_crs(band_metadata['crs'])\n",
+    "\n",
+    "# check that CRS's now match\n",
+    "print(band_metadata['crs'] == aoi.crs, band_metadata['crs'] == fish_farm_pts.crs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "selected-classification",
+   "id": "narrow-traveler",
    "metadata": {},
    "outputs": [],
    "source": []
