--- a/Introductory Jupyter Notebook.ipynb
+++ b/Introductory Jupyter Notebook.ipynb
@@ -72,6 +72,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "b1a433d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If running noteable\n",
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "asian-trademark",
    "metadata": {},
@@ -1577,7 +1588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1591,7 +1602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
